Add clarifying comments to 'static.js'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="section is-mono">
       <header class="has-text-centered">
         <div class="columns is-centered is-vcentered">
-          <span class="column undivided is-narrow">Something will go hereeeeee</span>
+          <span class="column undivided is-narrow">Something will go here soon</span>
           <hr class="column undivided"/>
           <h1 class="column undivided is-narrow is-display main-title">Helena Zhang</h1>
           <hr class="column undivided"/>
