Add meta tags and manifest

--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="utf-8">
     <title>Helena Zhang</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/bulma.css">
     <link rel="stylesheet" href="/css/overrides.css">
+    <meta
+      name="description"
+      content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
+    />
+    <meta name="author" content="Helena Zhang" />
+    <meta property="og:title" content="Helena Zhang" />
+    <meta
+      property="og:description"
+      content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
+    />
+    <meta property="og:url" content="https://abodywithoutorgans.com" />
+    <meta property="og:image" content="https://abodywithoutorgans.com/images/avatar-1-1@2x.png" />
+    <meta property="og:image:width" content="488" />
+    <meta property="og:image:height" content="488" />
+    <link rel="apple-touch-icon" href="/images/favicon/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/manifest.json" />
     <script src="/js/lazy.js"></script>
   </head>
   <body>
