Update meta tags for hosting at helenazhang.com

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       property="og:description"
       content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
     />
-    <meta property="og:url" content="https://abodywithoutorgans.com" />
-    <meta property="og:image" content="https://abodywithoutorgans.com/images/avatar-1-1@2x.png" />
+    <meta property="og:url" content="https://helenazhang.com" />
+    <meta property="og:image" content="https://helenazhang.com/images/avatar-1-1@2x.png" />
     <meta property="og:image:width" content="488" />
     <meta property="og:image:height" content="488" />
     <link rel="apple-touch-icon" href="/icons/favicon/apple-touch-icon.png" />
