--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="columns is-multiline no-margin">
             <div class="column no-margin undivided is-one-quarter">
               <figure class="image is-square">
-                <img class="lazy-load avatar" src="/images/avatar-1-1@2x.png" alt="Illustration of the author in the style of a Matt Groening character">
+                <img class="lazy-load avatar" data-src="/images/avatar-1-1@2x.png" alt="Illustration of the author in the style of a Matt Groening character">
               </figure>
             </div>
             <div class="column">
@@ -91,7 +91,7 @@
         <div class="columns">
           <article class="column">
             <figure class="image is-16by9">
-              <img class="lazy-load" src="/images/article-7-principles-16-9@2x.png" alt="Diagram of line icons illustrating their use of good design principles">
+              <img class="lazy-load" data-src="/images/article-7-principles-16-9@2x.png" alt="Diagram of line icons illustrating their use of good design principles">
             </figure>
             <summary>
               <h3 class="article-title is-display">7 Principles of Icon Design</h3>
@@ -105,7 +105,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-16by9">
-              <img class="lazy-load" src="/images/article-3-classic-16-9@2x.png" alt="Examples of icons from the NYC Transit System, Olympic Games, and the original Macintosh computer">
+              <img class="lazy-load" data-src="/images/article-3-classic-16-9@2x.png" alt="Examples of icons from the NYC Transit System, Olympic Games, and the original Macintosh computer">
             </figure>
             <summary>
               <h3 class="article-title is-display">3 Classic Icon Families</h3>
@@ -119,7 +119,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-16by9">
-              <img class="lazy-load" src="/images/article-icon-grids-16-9@2x.png" alt="A smiley-face icon placed on a grid illustrating its proportions">
+              <img class="lazy-load" data-src="/images/article-icon-grids-16-9@2x.png" alt="A smiley-face icon placed on a grid illustrating its proportions">
             </figure>
             <summary>
               <h3 class="article-title is-display">Icon Grids &amp; Keylines Demystified</h3>
@@ -133,7 +133,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-16by9">
-              <img class="lazy-load" src="/images/article-foundations-16-9@2x.png" alt="Specimens of an email icon, a globe icon, and a fingerprint icon">
+              <img class="lazy-load" data-src="/images/article-foundations-16-9@2x.png" alt="Specimens of an email icon, a globe icon, and a fingerprint icon">
             </figure>
             <summary>
               <h3 class="article-title is-display">Foundations of Iconography</h3>
@@ -157,7 +157,7 @@
         <div class="columns">
           <article class="column is-half">
             <figure class="image is-2by1">
-              <img class="lazy-load" src="/images/design-tri-2-1@2x.png" alt="Prototype design for the user interface of an autonomous car">
+              <img class="lazy-load" data-src="/images/design-tri-2-1@2x.png" alt="Prototype design for the user interface of an autonomous car">
             </figure>
             <summary class="content">
               <h3 class="article-title is-display">Toyota Research Institute</h3>
@@ -180,7 +180,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-3by2">
-              <img class="lazy-load" src="/images/design-waze-3-2@2x.png" alt="Two illustrated Wazers laughing and winking at each other">
+              <img class="lazy-load" data-src="/images/design-waze-3-2@2x.png" alt="Two illustrated Wazers laughing and winking at each other">
             </figure>
             <summary>
               <h3 class="article-title is-display">Waze</h3>
@@ -196,7 +196,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-3by2">
-              <img class="lazy-load" src="/images/design-paypal-3-2@2x.png" alt="A table view of recent payments made through the PayPal app">
+              <img class="lazy-load" data-src="/images/design-paypal-3-2@2x.png" alt="A table view of recent payments made through the PayPal app">
             </figure>
             <summary>
               <h3 class="article-title is-display">PayPal</h3>
@@ -216,7 +216,7 @@
         <div class="columns">
           <article class="column">
             <figure class="image is-square">
-              <img class="lazy-load" src="/images/design-soulcycle-1-1@2x.png" alt="Booking screen of the SoulCycle mobile app">
+              <img class="lazy-load" data-src="/images/design-soulcycle-1-1@2x.png" alt="Booking screen of the SoulCycle mobile app">
             </figure>
             <summary>
               <h3 class="article-title is-display">SoulCycle</h3>
@@ -232,7 +232,7 @@
           <hr class="is-mobile"/>
           <article class="column is-half">
             <figure class="image is-2by1">
-              <img class="lazy-load" src="/images/design-phosphor-android-2-1@2x.png" alt="Composition of icons from the Phosphor Cadmium icon pack for Android, on a flat-style phone frame">
+              <img class="lazy-load" data-src="/images/design-phosphor-android-2-1@2x.png" alt="Composition of icons from the Phosphor Cadmium icon pack for Android, on a flat-style phone frame">
             </figure>
             <summary>
               <h3 class="article-title is-display">Phosphor for Android</h3>
@@ -248,7 +248,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-square">
-              <img class="lazy-load" src="/images/design-prolific-1-1@2x.png" alt="Team page of the Prolific Interactive website, with profile photos of several employees">
+              <img class="lazy-load" data-src="/images/design-prolific-1-1@2x.png" alt="Team page of the Prolific Interactive website, with profile photos of several employees">
             </figure>
             <summary>
               <h3 class="article-title is-display">Prolific Interactive</h3>
@@ -261,7 +261,7 @@
         <hr/>
         <figure class="image is-fullwidth">
           <a href="https://play.google.com/store/apps/details?id=com.tobiasfried.phosphor">
-            <img class="lazy-load" src="/images/phosphor-for-android-6-1@2x.png" alt="Composition of black line-style icons on a yellow background, with the logo of Phosphor for Android">
+            <img class="lazy-load" data-src="/images/phosphor-for-android-6-1@2x.png" alt="Composition of black line-style icons on a yellow background, with the logo of Phosphor for Android">
           </a>
         </figure>
       </section>
@@ -276,7 +276,7 @@
         <div class="columns">
           <article class="column">
             <figure class="image is-16by9">
-              <img class="lazy-load" src="/images/dribbble-numbers-16-9@2x.png" alt="Digits zero through nine in a bubbly but slim font">
+              <img class="lazy-load" data-src="/images/dribbble-numbers-16-9@2x.png" alt="Digits zero through nine in a bubbly but slim font">
             </figure>
             <summary>
               <h3 class="article-title is-display">Numbers</h3>
@@ -289,7 +289,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-16by9">
-              <img class="lazy-load" src="/images/dribbble-trash-series-16-9@2x.png" alt="Vector illustration of discarded bowl of chicken wings and rice left on the sidewalk">
+              <img class="lazy-load" data-src="/images/dribbble-trash-series-16-9@2x.png" alt="Vector illustration of discarded bowl of chicken wings and rice left on the sidewalk">
             </figure>
             <summary>
               <h3 class="article-title is-display">Trash Series</h3>
@@ -302,7 +302,7 @@
           <hr class="is-mobile"/>
           <article class="column">
             <figure class="image is-16by9">
-              <img class="lazy-load" src="/images/dribbble-bunnimoji-16-9@2x.png" alt="Line illustration of three bunnies, two wearing sunglasses and the third with a blank stare">
+              <img class="lazy-load" data-src="/images/dribbble-bunnimoji-16-9@2x.png" alt="Line illustration of three bunnies, two wearing sunglasses and the third with a blank stare">
             </figure>
             <summary>
               <h3 class="article-title is-display">Bunnimoji</h3>
