meta: update OG tags

--- a/index.html
+++ b/index.html
@@ -12,15 +12,39 @@
       content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
     />
     <meta name="author" content="Helena Zhang" />
-    <meta property="og:title" content="Helena Zhang" />
-    <meta
-      property="og:description"
-      content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
-    />
-    <meta property="og:url" content="http://www.helenazhang.com" />
-    <meta property="og:image" content="http://www.helenazhang.com/images/avatar-1-1@2x.png" />
-    <meta property="og:image:width" content="488" />
-    <meta property="og:image:height" content="488" />
+
+     <!-- GOOGLE META -->
+     <meta itemprop="name" content="Helena Zhang" />
+     <meta
+       itemprop="description"
+       content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
+     />
+     <meta itemprop="image" content="http://www.helenazhang.com/images/avatar-1-1@2x.png" />
+ 
+     <!-- FACEBOOK META -->
+     <meta property="og:title" content="Helena Zhang" />
+     <meta property="og:site_name" content="Helena Zhang" />
+     <meta
+       property="og:description"
+       content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
+     />
+     <meta property="og:type" content="website" />
+     <meta property="og:url" content="https://phosphoricons.com" />
+     <meta property="og:image" content="http://www.helenazhang.com/images/avatar-1-1@2x.png" />
+     <meta property="og:image:type" content="image/png" />
+     <meta property="og:image:alt" content="Helena Zhang logo" />
+     <meta property="og:image:width" content="488" />
+     <meta property="og:image:height" content="488" />
+ 
+     <!-- TWITTER META -->
+     <meta name="twitter:card" content="summary_large_image" />
+     <meta name="twitter:title" content="Helena Zhang" />
+     <meta
+       name="twitter:description"
+       content="Hello, world! I'm a designer/writer based in Brooklyn, New York. I shape and ship digital products, create tools for creators, and write about design on Medium."
+     />
+     <meta name="twitter:image" content="http://www.helenazhang.com/images/avatar-1-1@2x.png" />
+
     <link rel="apple-touch-icon" href="/icons/favicon/apple-touch-icon.png" />
     <link
       rel="icon"
