fix(app): responsive columns for phosphor article

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           </figure>
           <h2>Design</h2>
         </div>
-        <article class="columns">
+        <article id="phosphor" class="columns reverse-mobile">
           <summary class="content column is-4 undivided">
             <h3 class="article-title is-display">Phosphor Icons</h3>
             <p>
